--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
 		<style>
 			canvas {
 				outline: 1px solid blue;
-				width:800px;
-				margin:50px auto;
-				display:block;
+				margin-left:100px;
+				margin-top:50px;
 				background-color:white;
 			}
+			.combine-paintings{
+				width:50px;
+				height:50px;
+				position:absolute;
+				margin-top: 150px;
+    			margin-left: 20px;
+    			background-image: url("http://www.clker.com/cliparts/H/D/e/R/O/P/green-plus-sign-md.png");
+    			background-size:cover;
+    			background-color: black;
+    		}
 			.button_panel {
 				padding:20px;
 				background-color: black;
@@ -45,9 +54,15 @@
 				Load
 			</button>
 		</div>
-		<canvas width=800 height=600 >your browser doesn't support canvas</canvas>
-
-		<script src="lab_painter.js"></script>
-
+		<div class="canvas-boards">
+			<canvas width="300" height="300">your browser doesn't support canvas</canvas>
+			<input  type="button" class="combine-paintings"  />
+			<canvas width="300" height="300">your browser doesn't support canvas</canvas>
+			<canvas width="300" height="300">your browser doesn't support canvas</canvas>
+		</div>
+		
+		<script src="js/paint.js"></script>
+		<script src="js/paintBoard.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
