--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>JS Bin</title>
+		<title>Collaborative drawingboard</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 	</head>
 	<body title="view-picture">
 		<div class="button_panel">
@@ -21,6 +22,7 @@
 			<canvas width="300" height="300">your browser doesn't support canvas</canvas>
 			<canvas width="300" height="300">your browser doesn't support canvas</canvas>
 		</div>
+		
 		
 		<script src="js/paint.js"></script>
 		<script src="js/paintBoard.js"></script>
